# webhook-cli

./: .gitignore  Cargo.toml  EXAMPLES.md  README.md  build.bat  config.toml  test.json
.github/workflows/: rust.yml
src/: cli.rs  client.rs  color_control.rs  commands.rs  config.rs  display.rs  main.rs  models.rs
